<resources>
    <string name="app_name">EasyFuelCalc</string>
    <string name="title_activity_menu">MainActivity</string>

    <string name="first_screen">Средний расход</string>
    <string name="second_screen">Стоимость поездки</string>
    <string name="third_screen">На сколько хватит топлива</string>
    <string name="fourth_screen">Стоимость 1 км.</string>
    <string name="settings_screen">Настройки</string>

    <string name="gaz">Залил:</string>
    <string name="drive">Проехал:</string>

    <string name="average">Средний расход:</string>

    <string name="result">Рассчитать</string>
    <string name="result_average_desc">Расход топлива составляет</string>

    <string name="result_cost_travel_fuel_desc">Необходимое количество топлива</string>
    <string name="result_cost_travel_cost_desc">Стоимость поездки</string>

    <string name="result_fuel_to_dist_desc">Вы сможете проехать</string>

    <string name="result_cost_to_dist_desc">Стоимость 1 км. составляет</string>

    <string name="cost_fuel">Стоимость топлива:</string>
    <string name="distance">Расстояние:</string>

    <string name="money_value">Тип валюты:</string>
    <string name="money_value_us">$</string>
    <string name="money_value_eu">€</string>
    <string name="money_value_uah">₴</string>
    <string name="money_value_rub">₽</string>

    <string name="distance_value">Дистанция:</string>
    <string name="distance_value_km">.км</string>
    <string name="distance_value_ml">.мл</string>

    <string name="fuel_value">Мера топлива:</string>
    <string name="fuel_value_lit">.л</string>
    <string name="fuel_value_lit_km">.л/100 км.</string>
    <string name="fuel_value_gal">.гал</string>

    <string name="theme">Тема:</string>
    <string name="theme_day">День</string>
    <string name="theme_night">Ночь</string>

    <string name="app_language">Язык:</string>
    <string name="app_language_rus">Русский</string>
    <string name="app_language_eu">English</string>

    <string name="all_rights_reserved">All rights reserved</string>

</resources>