<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_first"
        android:icon="@drawable/ic_car"
        android:title="@string/first_screen" />

    <item
        android:id="@+id/navigation_second"
        android:icon="@drawable/ic_car"
        android:title="@string/second_screen" />

    <item
        android:id="@+id/navigation_third"
        android:icon="@drawable/ic_car"
        android:title="@string/third_screen" />

    <item
        android:id="@+id/navigation_fourth"
        android:icon="@drawable/ic_car"
        android:title="@string/fourth_screen" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_screen" />

</menu>