<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_first">

    <fragment
        android:id="@+id/navigation_first"
        android:name="net.multipul.easyfuelcalc.ui.first.FirstFragment"
        android:label="@string/first_screen"
        tools:layout="@layout/fragment_first" />

    <fragment
        android:id="@+id/navigation_second"
        android:name="net.multipul.easyfuelcalc.ui.second.SecondFragment"
        android:label="@string/second_screen"
        tools:layout="@layout/fragment_second" />

    <fragment
        android:id="@+id/navigation_third"
        android:name="net.multipul.easyfuelcalc.ui.third.ThirdFragment"
        android:label="@string/third_screen"
        tools:layout="@layout/fragment_third" />

    <fragment
        android:id="@+id/navigation_fourth"
        android:name="net.multipul.easyfuelcalc.ui.fourth.FourthFragment"
        android:label="@string/fourth_screen"
        tools:layout="@layout/fragment_fourth" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="net.multipul.easyfuelcalc.ui.settings.SettingsFragment"
        android:label="@string/settings_screen"
        tools:layout="@layout/fragment_settings" />
</navigation>